Keep advice usable while managing Grand Exchange offers